--- a/package.json
+++ b/package.json
@@ -4,14 +4,22 @@
   "description": "",
   "type": "module",
   "scripts": {
-    "test": "node index.js",
-    "test:hermes": "./hermes -commonjs index.js tensor.js"
+    "build:metro": "node metro-build.cjs",
+    "run:metro": "./hermes metro-web-build-out.js",
+    "buildrun:metro": "node metro-build.cjs && ./hermes metro-web-build-out.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@tensorflow/tfjs": "^3.18.0",
+    "expo-asset": "^8.10.1",
+    "react-native": "^0.72.4",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.3"
+  },
+  "devDependencies": {
+    "@expo/metro-config": "^0.10.7",
+    "metro": "^0.79.0",
+    "metro-core": "^0.79.0"
   }
 }
